
160914	Fixed issue #30: UDP not working in combination with a configuration file.

160908	Released 0.33.2.

160560	In epoll.c: check for EPOLLHUP.

160503	In dsr.c: always use our real mac address, to avoid confusing switches.
	Released 0.33.1.

160407	Cleaned up code residue surrounded by "#if 0".
	Released 0.33.0.

160407	Added CS_HALFDEAD for UDP streams that haven't seen traffic in a while.

160321	Bug in pending_and_closing: don't modify the list we're looping over.

160318	Updated pen manpage.
	Deprecated -Q option (it didn't do anything since kqueue was already the
	default where it was available).
	Fixed error handling in epoll support.

160217	Added transparent UDP test case to testsuite.sh.

160128	Contribution from Talik Eichinger: add X-Forwarded-Proto when doing
	SSL decryption.

151123	Released 0.32.0.

151120	Added tarpit test case to testsuite.sh.

151117	Tarpit functionality to be used with the DSR mode.

151112	pen.1: removed obsolete -S option, updated defaults for -x and -L.

151105	Released 0.31.1.

151103	In failover_server: sanity checks to failover routine.

151102	In add_client: add the initial server to .client as well as .initial.

151029	In failover_server: changed abuse_server to ABUSE_SERVER and emerg_server
	to EMERG_SERVER, to handle their default NO_SERVER values.
	See issue #19 on Github.

151012	At the suggestion from Marcos Vinicius Rogowski, the hash algorith
	will now include the client port number if the -r (roundrobin)
	option is used. See https://github.com/UlricE/pen/pull/18
	Released 0.31.0.

150915	Officially released 0.30.1.

150909	Fixed IP-based client tracking.

150828	Removed unnecessary #include <pen.h> in dlist.c

150818	Released 0.30.0.

150803	Added UDP mode for Direct Server Return.

150803	Updated configure.ac for compatibility with CentOS 6.

150725	Added #ifdef around SSLv3 initialization code in ssl, as
	suggested by jca@openbsd.org.

150608	Released 0.29.0.
