@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT([pen],[0.33.2])
+AC_INIT([pen],[0.34.0])
 AC_CONFIG_SRCDIR([pen.c])
 AC_CONFIG_HEADERS(config.h)
 AM_INIT_AUTOMAKE
