@@ -203,6 +203,9 @@ List address, port, weight, priority and max number of simultaneous connections 
 \fIsocket N\fR
 Show to which connection socket N belongs.
 .TP
+\fIsource IP\fR
+Set the local address to IP for upstream connections, i.e. where Pen connects to backend servers.
+.TP
 \fIssl_ciphers CIPHERS\fR
 Choose list of available SSL ciphers, specified in the format described in https://www.openssl.org/docs/apps/ciphers.html.
 .TP
